readUserEnrollment and readEnrollment api
