# gardabook-services/controllers/Enrollment.js
@@ -17,11 +17,24 @@ module.exports.createEnrollment = function createEnrollment (req, res, next) {
     });
 };
 
-module.exports.getEnrollmentByProviderId = function getEnrollmentByProviderId (req, res, next) {
+module.exports.getUserEnrollment = function getUserEnrollment (req, res, next) {
 
   var xIntRole = req.swagger.params['x-int-role'].value;
-  var providerId = req.swagger.params['providerId'].value;
-  Enrollment.getEnrollmentByProviderId(xIntRole,providerId)
+  var userId = req.swagger.params['userId'].value;
+  Enrollment.getUserEnrollment(xIntRole,userId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getEnrollment = function getEnrollment (req, res, next) {
+
+  var xIntRole = req.swagger.params['x-int-role'].value;
+  var enrollmentId = req.swagger.params['enrollmentId'].value;
+  Enrollment.getEnrollment(xIntRole,enrollmentId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
